--- a/About_us.html
+++ b/About_us.html
@@ -12,7 +12,7 @@
 	</div>
 	<nav>
 		<ul>
-			<li><a href="Index.html">Home</a></li>
+			<li><a href="#">Home</a></li>
 			<li><a href="About_us.html">About Us</a></li>
 			<li><a href="MyAccount.html">My Account</a></li>
 			<li><a href="Produts.html">Products </a></li>
