--- a/Produts.html
+++ b/Produts.html
@@ -3,6 +3,36 @@
 <head>
 	<title>MediCure Pharmaceuticals (pvt) Ltd</title>
 	<link rel="stylesheet" type="text/css" href="css/Aa.css">
+	<style>
+		.card {
+		  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+		  max-width: 300px;
+		  margin: auto;
+		  text-align: center;
+		  font-family: arial;
+		}
+		
+		.price {
+		  color: grey;
+		  font-size: 22px;
+		}
+		
+		.card button {
+		  border: none;
+		  outline: 0;
+		  padding: 12px;
+		  color: white;
+		  background-color: #000;
+		  text-align: center;
+		  cursor: pointer;
+		  width: 100%;
+		  font-size: 18px;
+		}
+		
+		.card button:hover {
+		  opacity: 0.7;
+		}
+		</style>
 </head>
 <body>
 	<div class="header">
@@ -21,6 +51,41 @@
 			<li><a href="Contact Us.html">Contact Us</a></li>
 		</ul>
 	</nav>
+
+	<h2 style="text-align:center">Product Card</h2>
+
+	<div class="card">
+  		<img src="/w3images/jeans3.jpg" alt="Denim Jeans" style="width:100%">
+  		<h1>Tailored Jeans</h1>
+  		<p class="price">$19.99</p>
+  		<p>Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+  		<p><button>Add to Cart</button></p>
+	</div>
+
+	<div class="card">
+		<img src="/w3images/jeans3.jpg" alt="Denim Jeans" style="width:100%">
+		<h1>Tailored Jeans</h1>
+		<p class="price">$19.99</p>
+		<p>Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+		<p><button>Add to Cart</button></p>
+  </div>
+
+  <div class="card">
+	<img src="/w3images/jeans3.jpg" alt="Denim Jeans" style="width:100%">
+	<h1>Tailored Jeans</h1>
+	<p class="price">$19.99</p>
+	<p>Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+	<p><button>Add to Cart</button></p>
+</div>
+
+<div class="card">
+	<img src="/w3images/jeans3.jpg" alt="Denim Jeans" style="width:100%">
+	<h1>Tailored Jeans</h1>
+	<p class="price">$19.99</p>
+	<p>Some text about the jeans. Super slim and comfy lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+	<p><button>Add to Cart</button></p>
+</div>
+
 
 </body>
 </html>
