--- a/About_us.html
+++ b/About_us.html
@@ -12,7 +12,7 @@
 	</div>
 	<nav>
 		<ul>
-			<li><a href="#">Home</a></li>
+			<li><a href="Index.html">Home</a></li>
 			<li><a href="About_us.html">About Us</a></li>
 			<li><a href="MyAccount.html">My Account</a></li>
 			<li><a href="Produts.html">Products </a></li>
@@ -21,6 +21,18 @@
 			<li><a href="Contact Us.html">Contact Us</a></li>
 		</ul>
 	</nav>
+
+	<div align="center">
+		<img src="Images/aboutus1.jpg" alt="Img5" width="1300px">
+	</div>
+		
+	<div align="center">
+		<b><p style="font-size:20px">We have made significant achievements in the pharmaceutical industry. The company has steadily made progress <br>
+		by successfully earning a reputed name with the able guidance and valuable expertise of its leaders. It has gained <br>
+		a rich experience in the marketing of pharmaceuticals, Nutraceuticals, and Cosmetics Products. Our strong commitment<br> 
+		of providing quality products is boasted by in-depth industry knowledge, well-qualified team of professionals, <br>
+		as well as hi-tech and advanced infrastructure. Resultantly, creating mutually beneficial associations for all the parties involved.</p></b>
+	</div>
 
 </body>
 </html>
