--- a/Contact Us.html
+++ b/Contact Us.html
@@ -3,40 +3,7 @@
 <head>
 	<title>MediCure Pharmaceuticals (pvt) Ltd</title>
 	<link rel="stylesheet" type="text/css" href="css/Aa.css">
-	<style>
-		body {font-family: Arial, Helvetica, sans-serif;}
-		* {box-sizing: border-box;}
-		
-		input[type=text], select, textarea {
-		  width: 100%;
-		  padding: 12px;
-		  border: 1px solid #ccc;
-		  border-radius: 4px;
-		  box-sizing: border-box;
-		  margin-top: 6px;
-		  margin-bottom: 16px;
-		  resize: vertical;
-		}
-		
-		input[type=submit] {
-		  background-color: #4CAF50;
-		  color: white;
-		  padding: 12px 20px;
-		  border: none;
-		  border-radius: 4px;
-		  cursor: pointer;
-		}
-		
-		input[type=submit]:hover {
-		  background-color: #45a049;
-		}
-		
-		.container {
-		  border-radius: 5px;
-		  background-color: #f2f2f2;
-		  padding: 20px;
-		}
-		</style>
+	<link rel="stylesheet" type="text/css" href="css/contact_us.css">
 </head>
 <body>
 	<div class="header">
@@ -46,7 +13,7 @@
 	</div>
 	<nav>
 		<ul>
-			<li><a href="Index.html">Home</a></li>
+			<li><a href="#">Home</a></li>
 			<li><a href="About_us.html">About Us</a></li>
 			<li><a href="MyAccount.html">My Account</a></li>
 			<li><a href="Produts.html">Products </a></li>
@@ -55,30 +22,29 @@
 			<li><a href="Contact Us.html">Contact Us</a></li>
 		</ul>
 	</nav>
-
-	<h3>Contact Form</h3>
-
-<div class="container">
-  <form action="/action_page.php">
-    <label for="fname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-    <label for="lname">Last Name</label>
-    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-
-    <label for="country">Country</label>
-    <select id="country" name="country">
-      <option value="australia">Australia</option>
-      <option value="canada">Canada</option>
-      <option value="usa">USA</option>
-    </select>
-
-    <label for="subject">Subject</label>
-    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-
-    <input type="submit" value="Submit">
-  </form>
-</div>		
-
+	<div class="row">
+		<div class="column">
+		  <img src="Images/Contact-Us.jpg" style="width:100%">
+		</div>
+		<div class="column">
+		  <form style="font-size: 18px" action="Success.html">
+			<label for="fname">First Name</label>
+			<input type="text" id="fname" name="firstname" placeholder="Your name please">
+			<label for="lname">Last Name</label>
+			<input type="text" id="lname" name="lastname" placeholder="Your last name please">
+			<label for="country">Country</label>
+			<select id="city" name="city">
+					<option value="Batticaloa">Batticaloa</option>
+					<option value="Colombo">Colombo</option>
+			  		<option value="Jaffna">Jaffna</option>
+			    	<option value="Kandy">Kandy</option>
+					<option value="usa">Trincomalee</option>
+			</select>
+			<label for="subject">What do you need from us?</label>
+			<textarea id="subject" name="subject" placeholder="Your inquiry please ..." style="height:170px"></textarea>
+			<input type="submit" value="SUBMIT">
+		  </form>
+		</div>
+	
 </body>
 </html>
