--- a/MyAccount.html
+++ b/MyAccount.html
@@ -145,7 +145,7 @@ span.psw {
 			<li><a href="MyAccount.html">My Account</a></li>
 			<li><a href="Produts.html">Products </a></li>
 			<li><a href="Pharmacies.html">Pharmacies</a></li>
-			<li><a href="Sales & Distributions.html">Sales & Distributions</a></li>
+			<!-- <li><a href="Sales & Distributions.html">Sales & Distributions</a></li> -->
 			<li><a href="Contact Us.html">Contact Us</a></li>
 		</ul>
   </nav>
@@ -207,6 +207,7 @@ span.psw {
   </form>
 </div>
 
+<!-- JavaScript -->
 <script>
 // Get the modal
 var modal = document.getElementById('id01');
@@ -218,8 +219,6 @@ window.onclick = function(event) {
     }
 }
 </script>
-
-
 
 </body>
 </html>
