--- a/Produts.html
+++ b/Produts.html
@@ -47,7 +47,7 @@
 			<li><a href="MyAccount.html">My Account</a></li>
 			<li><a href="Produts.html">Products </a></li>
 			<li><a href="Pharmacies.html">Pharmacies</a></li>
-			<li><a href="Sales & Distributions.html">Sales & Distributions</a></li>
+			<!-- <li><a href="Sales & Distributions.html">Sales & Distributions</a></li> -->
 			<li><a href="Contact Us.html">Contact Us</a></li>
 		</ul>
 	</nav>
