--- a/Contact Us.html
+++ b/Contact Us.html
@@ -19,7 +19,7 @@
 			<li><a href="MyAccount.html">My Account</a></li>
 			<li><a href="Produts.html">Products </a></li>
 			<li><a href="Pharmacies.html">Pharmacies</a></li>
-			<li><a href="Sales & Distributions.html">Sales & Distributions</a></li>
+			<!-- <li><a href="Sales & Distributions.html">Sales & Distributions</a></li> -->
 			<li><a href="Contact Us.html">Contact Us</a></li>
 		</ul>
 	</nav>
@@ -28,6 +28,7 @@
 		  <img src="Images/Contact-Us.jpg" style="width:100%">
 		</div>
 		<div class="column">
+				<!-- JavaScript -->
 				<script>
 						function validateForm() {
 						var x = document.forms["myForm"]["fname"].value;
@@ -46,6 +47,7 @@
 						}
 					} 
 				</script>
+				
 		  <form name="myForm" style="font-size: 18px" action="Success.html" onsubmit="return validateForm()" method="post">
 			<label for="fname">First Name</label>
 			<input type="text" id="fname" name="firstname" placeholder="Your name please">
