--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
 			<li><a href="MyAccount.html">My Account</a></li>
 			<li><a href="Produts.html">Products </a></li>
 			<li><a href="Pharmacies.html">Pharmacies</a></li>
-			<li><a href="Sales & Distributions.html">Sales & Distributions</a></li>
+			<!-- <li><a href="Sales & Distributions.html">Sales & Distributions</a></li> -->
 			<li><a href="Contact Us.html">Contact Us</a></li>
 		</ul>
 	</nav>
@@ -38,8 +38,6 @@
 	</div>
 	
 </div>
-
-<!-- check git work -->
 	
 </body>
 </html>
