--- a/Pharmacies.html
+++ b/Pharmacies.html
@@ -22,5 +22,46 @@
 		</ul>
 	</nav>
 	
+	<ul>
+		<li><a href="https://www.google.com/search?client=firefox-b-d&sxsrf=ACYBGNRwyc11EqJq4uog-s27q3Pou1xMrw:1576420744719&ei=XUX2Xe6JEpG_9QP9raHoAQ&q=list%20of%20pharmacies%20in%20Jaffna&oq=list+of+pharmacies+in+Jaffna&gs_l=psy-ab.3..33i160.40047.40972..41634...0.2..0.207.1091.0j5j1......0....1..gws-wiz.......0i71j0j0i22i30j33i22i29i30.Zu8JhV41ZPo&ved=2ahUKEwjJloX08LfmAhWDb30KHfM-C6IQvS4wAHoECAsQFg&uact=5&npsic=0&rflfq=1&rlha=0&rllag=9665901,80012795,196&tbm=lcl&rldimm=3464181481693915540&lqi=ChxsaXN0IG9mIHBoYXJtYWNpZXMgaW4gSmFmZm5hWiIKCnBoYXJtYWNpZXMiFHBoYXJtYWNpZXMgaW4gamFmZm5h&rldoc=1&tbs=lrf:!1m4!1u3!2m2!3m1!1e1!2m1!1e3!3sIAE,lf:1,lf_ui:3&rlst=f#rlfi=hd:;si:3464181481693915540,l,ChxsaXN0IG9mIHBoYXJtYWNpZXMgaW4gSmFmZm5hWiIKCnBoYXJtYWNpZXMiFHBoYXJtYWNpZXMgaW4gamFmZm5h;mv:[[9.690638,80.04294039999999],[9.6638603,80.00723649999999]];tbs:lrf:!1m4!1u3!2m2!3m1!1e1!2m1!1e3!3sIAE,lf:1,lf_ui:3">City Medical Care</a>
+			<ul>
+				<li>558A Hospital Rd, Jaffna</li>
+				<li>021 221 7661</li>
+			</ul>
+		</li>
+		<br>
+		<li><a href="https://www.google.com/search?client=firefox-b-d&biw=1536&bih=728&tbm=lcl&sxsrf=ACYBGNRdSRP2tcNyEaVQzeMYjRyBLidMMQ%3A1576421864538&ei=6En2XaG-INSFyAO3rY3QBw&q=crystal+pharmacy+galle&oq=crystal+pharmacy+ga&gs_l=psy-ab.3.0.0j0i22i30k1.13271.14970.0.16647.5.4.1.0.0.0.201.713.0j3j1.4.0....0...1c.1.64.psy-ab..0.5.718....0.1q3LJN-OCxs#rlfi=hd:;si:14859604660898359200;mv:[[6.034518177319028,80.21886208011693],[6.034158222680969,80.21850011988305]]">Crystal Pharmacy</a>
+			<ul>
+				<li>162 Main Street, Galle</li>
+				<li>091 223 4762</li>
+			</ul>
+		</li>
+		<br>
+		<li><a href="https://www.google.com/search?client=firefox-b-d&biw=1536&bih=728&sxsrf=ACYBGNRdcMRlgRR0g6exI3kzKnM-V5VitA:1576422019723&ei=eEr2XdLtNtGL4-EPrvaqgA0&q=crescent%20pharmacy&oq=crescent+pharmacy&gs_l=psy-ab.3..0i71l3.0.0..9459...0.2..0.0.0.......0......gws-wiz.ZNDo7AF9MXc&ved=2ahUKEwjWwIHU9bfmAhVl4zgGHROcDT4QvS4wAXoECAsQKw&uact=5&npsic=0&rflfq=1&rlha=0&rllag=6914981,79858283,1063&tbm=lcl&rldimm=5734938432334584499&rldoc=1&tbs=lrf:!1m4!1u3!2m2!3m1!1e1!1m4!1u2!2m2!2m1!1e1!2m1!1e2!2m1!1e3!3sIAE,lf:1,lf_ui:10&rlst=f#rlfi=hd:;si:5734938432334584499;mv:[[15.661670800000001,84.90092779999999],[-32.4044026,27.948684699999998]];tbs:lrf:!1m4!1u3!2m2!3m1!1e1!1m4!1u2!2m2!2m1!1e1!2m1!1e2!2m1!1e3!3sIAE,lf:1,lf_ui:10">Healthguard Pharmacy Express - Liberty Plaza</a>
+			<ul>
+				<li>250/B/2, Liberty Plaza, R. A. De Mel Mawatha, Colombo 07</li>
+				<li>011 450 1327</li>
+			</ul>
+		</li>
+		<br>
+		<li><a href="https://www.google.com/search?client=firefox-b-d&biw=1536&bih=728&tbm=lcl&sxsrf=ACYBGNS6Bo7aNq41LpeDIQYZKKcT0tF6Ww%3A1576421707404&ei=S0n2Xc-sGKGW4-EPtrKNwAU&q=colombo+medical+stores%2C+union+place&oq=colombo+medical+stores%2C+union+place&gs_l=psy-ab.3...25338.27898.0.28616.13.13.0.0.0.0.208.1860.0j8j2.10.0....0...1c.1.64.psy-ab..3.9.1647...33i160k1j33i22i29i30k1.0.q7Lr0eYJ150#rlfi=hd:;si:13469246536448498148,l,CiNjb2xvbWJvIG1lZGljYWwgc3RvcmVzLCB1bmlvbiBwbGFjZUjZi4XO5YCAgAhaPgoObWVkaWNhbCBzdG9yZXMQARACGAAYAxgEIiJjb2xvbWJvIG1lZGljYWwgc3RvcmVzIHVuaW9uIHBsYWNl,y,eDZzBtWZxG8;mv:[[6.9237018,79.87248029999999],[6.907277499999999,79.8471902]]">Union Chemists</a>
+				<ul>
+					<li>460 Union Place, Colombo 02.</li>
+					<li> 011 269 2532</li>
+				</ul>
+		</li>
+		<br>
+		<li><a href="https://www.google.com/search?client=firefox-b-d&sxsrf=ACYBGNRm0L9joRwZqJWMDukTsIBKY-cqyg:1576421637083&q=list%20of%20pharmacies%20in%20Jaffna&sa=X&ved=2ahUKEwjD-cad9LfmAhWzwzgGHR0TBc8QvS4wAnoECAsQJQ&biw=1536&bih=728&dpr=1.25&npsic=0&rflfq=1&rlha=0&rllag=9665901,80012795,196&tbm=lcl&rldimm=14691478208218542226&rldoc=1&tbs=lrf:!1m4!1u3!2m2!3m1!1e1!2m1!1e3!3sIAE,lf:1,lf_ui:3&rlst=f#rlfi=hd:;si:14691478208218542226;mv:[[9.690638,80.04294039999999],[9.6638603,80.00723649999999]];tbs:lrf:!1m4!1u3!2m2!3m1!1e1!2m1!1e3!3sIAE,lf:1,lf_ui:3">Prince Pharmacy</a>
+			<ul>
+				<li>No. 462D, Hospital Road, Jaffna</li>
+				<li>021 459 0590</li>
+			</ul>
+		</li>
+		<br>
+
+	</ul>
+	
+	
+	
 </body>
 </html>
