signup and sign in

--- a/signup.html
+++ b/signup.html
@@ -79,6 +79,9 @@ button:hover {
     <p>Please fill in this form to create an account.</p>
     <hr>
 
+    <label for="username"><b>User Name</b></label>
+    <input type="text" placeholder="Enter User Name" name="username" required>
+
     <label for="email"><b>Email</b></label>
     <input type="text" placeholder="Enter Email" name="email" required>
 
