--- a/MyAccount.html
+++ b/MyAccount.html
@@ -164,61 +164,16 @@ span.psw {
   <div class="facetext">
 	  <h2 align="center" style="color: navy">Login to your account</h2>
 
-    <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;margin:auto;display:block;background-color:seagreen">LOGIN</button>
+    <button onclick=" window.open('login.php','_blank')"style="width:auto;margin:auto;display:block;background-color:seagreen">LOGIN</button>
 
   <br>
   <br>
 
-    <form action="signup.html">
-    <!-- <input type="submit" value="SIGNUP" /> -->
-      <h2 align="center" style="color: navy">Create a new account</h2>
-      <button style="width:auto;margin:auto;display:block;background-color:seagreen">SIGNUP</button>
+    <h2 align="center" style="color: navy">Create a new account</h2>
+    
+    <button onclick=" window.open('register.php','_blank')"style="width:auto;margin:auto;display:block;background-color:seagreen">SIGNUP</button>
 
-    </form>
   </div>
-
-</div>
-
-<div id="id01" class="modal">
-  
-  <form class="modal-content animate" action="/action_page.php" method="post">
-    <div class="imgcontainer">
-      <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-      <img src="img_avatar2.png" alt="Avatar" class="avatar">
-    </div>
-
-    <div class="container">
-      <label for="uname"><b>Username</b></label>
-      <input type="text" placeholder="Enter Username" name="uname" required>
-
-      <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
-        
-      <button type="submit">Login</button>
-      <label>
-        <input type="checkbox" checked="checked" name="remember"> Remember me
-      </label>
-    </div>
-
-    <div class="container" style="background-color:#f1f1f1">
-      <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-      <span class="psw">Forgot <a href="#">password?</a></span>
-    </div>
-  </form>
-</div>
-
-<!-- JavaScript -->
-<script>
-// Get the modal
-var modal = document.getElementById('id01');
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-    if (event.target == modal) {
-        modal.style.display = "none";
-    }
-}
-</script>
 
 </body>
 </html>
